fix: button overlap issue
This commit fixes an issue whereby when the task list, or list manager list had several items they would overlap the call to action buttons.

Added some bottom margin using the last-child css selector to allow enough space to accommodate the button.

--- a/src/style.css
+++ b/src/style.css
@@ -152,6 +152,10 @@ ul {
   padding: 1rem;
 }
 
+.list-item:last-child {
+  margin-bottom: 4rem;
+}
+
 .list-item:hover {
   cursor: pointer;
   color: var(--accent-lighter);
@@ -298,7 +302,7 @@ button:hover, input[type="submit"]:hover {
 .add-task-btn,
 .new-list-btn {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
 }
 
